[gd_scene load_steps=10 format=3 uid="uid://dxgsii6laafcp"]

[ext_resource type="Script" path="res://scripts/weapons/melee/melee_weapon.gd" id="1_esq8h"]
[ext_resource type="Texture2D" uid="uid://70i32qjl31n5" path="res://assets/weapons/melee/sword.png" id="2_3mhk5"]

[sub_resource type="Animation" id="Animation_73n82"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint/SwingPoint/Sprite/HitboxArea/HitboxShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/SwingPoint:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PivotPoint/SwingPoint:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PivotPoint/SwingPoint:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PivotPoint:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ald8"]
resource_name = "swing_left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint/SwingPoint/Sprite/HitboxArea/HitboxShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.65, 0.925),
"transitions": PackedFloat32Array(1e+06, 1, 1),
"update": 0,
"values": [true, false, true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/SwingPoint:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PivotPoint/SwingPoint:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.925, 1.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PivotPoint/SwingPoint:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -1.4, 0, 0, 0, 0, 2.8, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.65, 0.925, 1.5)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_6yq42"]
resource_name = "swing_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint/SwingPoint/Sprite/HitboxArea/HitboxShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.65, 0.925),
"transitions": PackedFloat32Array(1e+06, 1, 1),
"update": 0,
"values": [true, false, true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/SwingPoint:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PivotPoint/SwingPoint:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.925, 1.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PivotPoint/SwingPoint:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 1.4, 0, 0, 0, 0, -2.8, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.65, 0.925, 1.5)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_85o3s"]
resource_name = "thrust"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PivotPoint/SwingPoint/Sprite/HitboxArea/HitboxShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.65, 0.925),
"transitions": PackedFloat32Array(1e+06, 1, 1),
"update": 0,
"values": [true, false, true]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PivotPoint/SwingPoint:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PivotPoint/SwingPoint:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.65, 0.925, 1.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6h5g"]
_data = {
"RESET": SubResource("Animation_73n82"),
"swing_left": SubResource("Animation_8ald8"),
"swing_right": SubResource("Animation_6yq42"),
"thrust": SubResource("Animation_85o3s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_165a2"]
size = Vector2(20, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_t3eje"]
radius = 110.0

[node name="MeleeWeapon" type="Node2D"]
visible = false
z_index = 1
script = ExtResource("1_esq8h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_m6h5g")
}

[node name="PivotPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="SwingPoint" type="Marker2D" parent="PivotPoint"]
unique_name_in_owner = true

[node name="Sprite" type="Sprite2D" parent="PivotPoint/SwingPoint"]
unique_name_in_owner = true
position = Vector2(65, -1)
scale = Vector2(2, 2)
texture = ExtResource("2_3mhk5")

[node name="HitboxArea" type="Area2D" parent="PivotPoint/SwingPoint/Sprite"]
collision_layer = 4

[node name="HitboxShape" type="CollisionShape2D" parent="PivotPoint/SwingPoint/Sprite/HitboxArea"]
unique_name_in_owner = true
position = Vector2(5, 0.5)
shape = SubResource("RectangleShape2D_165a2")

[node name="MeleeRange" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="MeleeRangeShape" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource("CircleShape2D_t3eje")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="PivotPoint/SwingPoint/Sprite/HitboxArea" to="." method="_on_hitbox_area_area_entered"]
[connection signal="area_entered" from="MeleeRange" to="." method="_on_melee_range_area_entered"]
[connection signal="area_exited" from="MeleeRange" to="." method="_on_melee_range_area_exited"]
